--- a/high-fidelity-prototype/customer/index.html
+++ b/high-fidelity-prototype/customer/index.html
@@ -8,6 +8,13 @@
     <title>Craig List</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" rel="stylesheet">
+    <style>
+        body {
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
+        }
+    </style>
 </head>
 
 <!-- NOTE: Make the user profile CSS customizable (eg. Dark, Light, Rainbow Moving, Disco, etc) -->
@@ -19,7 +26,7 @@
     <div class="sticky-top container-fluid bg-dark text-light">
         <header class="d-flex justify-content-between align-items-center py-1">
             <!-- Logo -->
-            <a href="/high-fidelity-prototype/customer/index.html">
+            <a href="index.html">
                 <img style="width: 70px; height: 70px;" src="images/img_test.png" alt="Logo" class="img-fluid">
             </a>
             <!-- Search Bar -->
@@ -66,7 +73,7 @@
 
     <!-- Footer -->
     <footer class="bg-dark text-light text-center py-3 mt-4">
-        <p>&copy; 2025 Craig List Org</p>
+        <p>&copy; 2025 Craig List App</p>
     </footer>
 
     <!-- Scripts -->
