--- a/high-fidelity-prototype/customer/preregister_form.html
+++ b/high-fidelity-prototype/customer/preregister_form.html
@@ -36,34 +36,76 @@
             <div class="col-md-4">
                 <div class="card bg-white text-dark shadow">
                     <div class="card-body">
-                        <h3 class="card-title text-center mb-4">Register</h3>
+                        <h3 class="card-title text-center mb-4">Personalize Your Experience</h3>
                         <form>
-                            <div class="mb-3">
-                                <label for="firstName" class="form-label">First name</label>
-                                <input type="name" class="form-control" id="firstName" placeholder="Enter first name">
+                            <div id="interests-group" class="mb-3">
+                                <label for="interests" class="form-label">Select your interests:</label>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" value="Electronics" id="interest1">
+                                    <label class="form-check-label" for="interest1">
+                                        Electronics
+                                    </label>
+                                </div>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" value="Furniture" id="interest2">
+                                    <label class="form-check-label" for="interest2">
+                                        Furniture
+                                    </label>
+                                </div>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" value="Clothing" id="interest3">
+                                    <label class="form-check-label" for="interest3">
+                                        Clothing
+                                    </label>
+                                </div>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" value="Books" id="interest4">
+                                    <label class="form-check-label" for="interest4">
+                                        Books
+                                    </label>
+                                </div>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" value="Vehicles" id="interest5">
+                                    <label class="form-check-label" for="interest5">
+                                        Vehicles
+                                    </label>
+                                </div>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" value="Real Estate" id="interest6">
+                                    <label class="form-check-label" for="interest6">
+                                        Real Estate
+                                    </label>
+                                </div>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" value="Jobs" id="interest7">
+                                    <label class="form-check-label" for="interest7">
+                                        Jobs
+                                    </label>
+                                </div>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" value="Services" id="interest8">
+                                    <label class="form-check-label" for="interest8">
+                                        Services
+                                    </label>
+                                </div>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" value="Hobbies" id="interest9">
+                                    <label class="form-check-label" for="interest9">
+                                        Hobbies
+                                    </label>
+                                </div>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" value="Miscellaneous" id="interest10">
+                                    <label class="form-check-label" for="interest10">
+                                        Miscellaneous
+                                    </label>
+                                </div>
                             </div>
-                            <div class="mb-3">
-                                <label for="lastName" class="form-label">Last Name</label>
-                                <input type="name" class="form-control" id="lastName" placeholder="Enter last name">
-                            </div>
-                            <div class="mb-3">
-                                <label for="username" class="form-label">Username</label>
-                                <input type="name" class="form-control" id="username" placeholder="Enter username">
-                            </div>
-                            <div class="mb-3">
-                                <label for="email" class="form-label">Email address</label>
-                                <input type="email" class="form-control" id="email" placeholder="Enter email">
-                            </div>
-                            <div class="mb-3">
-                                <label for="password" class="form-label">Password</label>
-                                <input type="password" class="form-control" id="password1" placeholder="Enter Password">
-                                <input type="password" class="form-control" id="password2" placeholder="Reenter Password">
-                            </div>
-                            <div class="d-grid gap-2">
-                                <button type="submit" class="btn btn-primary">Create Account</button>
+                            <div class="d-grid gap-2 mt-3">
+                                <button type="submit" class="btn btn-primary">Save Preferences</button>
                             </div>
                         </form>
-                        <p class="text-center mt-3">Already have an account? <a href="login.html">Login here</a></p>
+                        <p class="text-center mt-3"><a href="index.html">Skip</a></p>
                     </div>
                 </div>
             </div>
@@ -77,5 +119,19 @@
 
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        const form = document.querySelector('form');
+        form.addEventListener('submit', function(event) {
+            event.preventDefault();
+            const checked = Array.from(document.querySelectorAll('#interests-group input[type="checkbox"]:checked'))
+                .map(cb => cb.value);
+            console.log('Selected interests:', checked);
+
+            // Save preferences to server
+
+            alert('Preferences saved successfully!');
+            window.location.href = 'index.html';
+        });
+    </script>
 </body>
 </html>
