--- a/high-fidelity-prototype/customer/register.html
+++ b/high-fidelity-prototype/customer/register.html
@@ -167,7 +167,7 @@
                 // Send data to backend server
 
                 alert('Account created successfully!');
-                window.location.href = 'login.html';
+                window.location.href = 'preregister_form.html';
             } else {
                 alert('Please fill in all fields correctly.');
             }
