Updated pages for login purposes

--- a/high-fidelity-prototype/customer/listing_view.html
+++ b/high-fidelity-prototype/customer/listing_view.html
@@ -127,7 +127,7 @@
             title: "Lawn Mowing Service",
             description: "Professional lawn mowing and garden maintenance services.",
             price: "$40 per session",
-            images: ["https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Frobshortsmowing.com.au%2Fwp-content%2Fuploads%2F2023%2F02%2FRob-Shorts-Mowing-Lawn-mowing-services-Patterson-Lakes-and-surrounding-suburbs-01.jpg&f=1&nofb=1&ipt=8735339e4cfedac19fd358094dc2f79f27e77fb90548f42220756504538d2af9"]
+            images: ["https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse1.mm.bing.net%2Fth%2Fid%2FOIP.vYszrRtaBe4htOjt3NkbFwHaFm%3Fpid%3DApi&f=1&ipt=faaa30f18617ada564f557b6066429b14a59791ff3ecfc7d4c82094664f052ab&ipo=images"]
         }];
 
         // Get listing ID from URL
