--- a/high-fidelity-prototype/customer/login.html
+++ b/high-fidelity-prototype/customer/login.html
@@ -85,7 +85,7 @@
                 // Send data to server here (not implemented)
 
                 alert('Logged in successfully!');
-                window.location.href = 'index.html';
+                window.location.href = 'index.html?loggedIn=true'; // Simulate login by redirecting with a query parameter
             } else {
                 alert('Please fill in all fields correctly.');
             }
