--- a/high-fidelity-prototype/customer/preregister_form.html
+++ b/high-fidelity-prototype/customer/preregister_form.html
@@ -130,7 +130,7 @@
             // Save preferences to server
 
             alert('Preferences saved successfully!');
-            window.location.href = 'index.html';
+            window.location.href = 'index.html?loggedIn=true'; // Simulate login by redirecting with a query parameter
         });
     </script>
 </body>
