modified pages to use backend API & added a new class 'LoginRequest.java'

--- a/backend-api/src/main/resources/static/rating.html
+++ b/backend-api/src/main/resources/static/rating.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/x-icon" href="../images/img_test.ico" />
+    <link rel="icon" type="image/x-icon" href="../images/img_test1.ico" />
     <title>Craig List — Ratings</title>
 
     <!-- Libraries -->
@@ -85,7 +85,7 @@
         <header class="d-flex justify-content-between align-items-center py-1">
             <!-- Logo -->
             <a href="../index.html">
-                <img style="width:70px;height:70px" src="../images/img_test.png" alt="Logo"
+                <img style="width:70px;height:70px" src="../images/img_test1_white.png" alt="Logo"
                     class="img-fluid" />
             </a>
 
