--- a/backend-api/src/main/resources/static/preregister_form.html
+++ b/backend-api/src/main/resources/static/preregister_form.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="images/img_test.ico">
+    <link rel="icon" type="image/x-icon" href="images/img_test1.ico">
     <title>Craig List</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" rel="stylesheet">
@@ -25,7 +25,7 @@
         <header class="d-flex justify-content-center align-items-center py-1">
             <!-- Logo -->
             <a href="index.html">
-                <img style="width: 100px; height: 100px;" src="images/img_test.png" alt="Logo" class="img-fluid">
+                <img style="width: 100px; height: 100px;" src="images/img_test1_white.png" alt="Logo" class="img-fluid">
             </a>
         </header>
     </div>
