--- a/backend-api/src/main/resources/static/profile.html
+++ b/backend-api/src/main/resources/static/profile.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/x-icon" href="images/img_test.ico" />
+    <link rel="icon" type="image/x-icon" href="images/img_test1.ico" />
     <title>Craig List — Profile</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" rel="stylesheet" />
@@ -54,7 +54,7 @@
     <div class="sticky-top container-fluid bg-dark text-light">
         <header class="d-flex justify-content-between align-items-center py-1">
             <a href="index.html">
-                <img style="width:70px;height:70px" src="images/img_test.png" alt="Logo" class="img-fluid" />
+                <img style="width:70px;height:70px" src="images/img_test1_white.png" alt="Logo" class="img-fluid" />
             </a>
             <form class="col-md-4 d-flex" role="search" onsubmit="event.preventDefault()">
                 <input class="form-control rounded-pill me-2" type="search" placeholder="Search" aria-label="Search" />
@@ -79,7 +79,7 @@
 
         <!-- Header -->
         <div class="d-flex flex-column align-items-center text-center mb-4">
-            <img class="avatar" src="images/img_test.png" alt="Profile Avatar" />
+            <img class="avatar" src="images/img_test1_white.png" alt="Profile Avatar" />
             <h1 class="h4 mt-3 mb-1">Jane Doe</h1>
             <div class="text-muted">janedoe@example.com</div>
         </div>
@@ -241,7 +241,7 @@
                             <div class="card-body">
                                 <h2 class="h6 mb-3">Profile Photo</h2>
                                 <div class="d-flex align-items-center gap-3">
-                                    <img class="avatar" src="images/img_test.png" alt="Avatar Preview" />
+                                    <img class="avatar" src="images/img_test1_white.png" alt="Avatar Preview" />
                                     <div class="flex-grow-1">
                                         <input type="file" class="form-control" />
                                         <div class="form-text">Upload is simulated for the prototype.</div>
