--- a/backend-api/src/main/resources/static/user_profile.html
+++ b/backend-api/src/main/resources/static/user_profile.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="images/img_test.ico">
+    <link rel="icon" type="image/x-icon" href="images/img_test1.ico">
     <title>Craig List</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" rel="stylesheet">
@@ -27,7 +27,7 @@
         <header class="d-flex justify-content-center align-items-center py-1">
             <!-- Logo -->
             <a href="index.html">
-                <img style="width: 100px; height: 100px;" src="images/img_test.png" alt="Logo" class="img-fluid">
+                <img style="width: 100px; height: 100px;" src="images/img_test1_white.png" alt="Logo" class="img-fluid">
             </a>
         </header>
     </div>
@@ -35,7 +35,7 @@
     <!-- Main Content Area -->
     <div class="container flex-grow-1 mt-4" id="user-profile">
         <div class="bg-white border rounded p-4 mb-4 d-flex align-items-center">
-            <img class="img-fluid border rounded me-3" style="width: 100px; height: 100px;" src="images/img_test.png" alt="User Avatar">
+            <img class="img-fluid border rounded me-3" style="width: 100px; height: 100px;" src="images/img_test1_white.png" alt="User Avatar">
             <div>
                 <h5 class="mb-1">Amazon <span class="text-warning">( 301 <i class="bi bi-star-fill"></i>)</span></h5>
                 <p class="mb-1">Member since: 23-10-25 in USA</p>
