--- a/backend-api/src/main/resources/static/index.html
+++ b/backend-api/src/main/resources/static/index.html
@@ -60,8 +60,7 @@
                 </form>
                 <!-- Location and Categories -->
                 <h2 class="">Location</h2>
-                <ul class="text-info list-unstyled">
-                    <li><i class="bi bi-geo-alt-fill mb-2 p-2" style="font-size: 25px;"></i> City, State</li>
+                <ul class="text-info list-unstyled" id="locationAPI">
                 </ul>
                 <h2 class="">Categories</h2>
                 <ul class="list-unstyled" id="categoryList">
@@ -86,6 +85,40 @@
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script>
+        // Geolocation API to get user's location and display it in the sidebar
+        navigator.geolocation.getCurrentPosition(position => {
+            const lat = position.coords.latitude;
+            const lon = position.coords.longitude;
+
+            fetch(`https://nominatim.openstreetmap.org/reverse?format=json&lat=${lat}&lon=${lon}`)
+                .then(response => {
+                    if (!response.ok) {
+                        throw new Error('Network response was not ok');
+                    }
+                    return response.json();
+                })
+                .then(data => {
+                    const address = data.address;
+                    const city = address.city || address.town || address.village || address.county || "Unknown City";
+                    //const zip = address.postcode || "";
+
+                    //const fullLocation = zip ? `${city}, ${zip}` : city;
+                    //setUserLocation(fullLocation);
+                    setUserLocation(city);
+                })
+                .catch(error => console.error('Error:', error));
+
+            function setUserLocation(locationText) {
+                const locationList = document.getElementById('locationAPI');
+                locationList.innerHTML = `
+                    <li><i class="bi bi-geo-alt-fill mb-2 p-2" style="font-size: 25px;"></i>${locationText}</li>
+                `;
+            }
+        }, error => {
+            console.error("Geolocation Error:", error);
+            document.getElementById('locationAPI').innerHTML = `<li>Location denied</li>`;
+        });
+
         // Get user status from URL (for simulation purposes)
         let urlParams = new URLSearchParams(window.location.search);
         let loginParam = urlParams.get('loggedIn');
