--- a/backend-api/src/main/resources/static/user_profile.html
+++ b/backend-api/src/main/resources/static/user_profile.html
@@ -34,85 +34,6 @@
 
     <!-- Main Content Area -->
     <div class="container flex-grow-1 mt-4" id="user-profile">
-        <div class="bg-white border rounded p-4 mb-4 d-flex align-items-center">
-            <img class="img-fluid border rounded me-3" style="width: 100px; height: 100px;" src="images/img_test1_white.png" alt="User Avatar">
-            <div>
-                <h5 class="mb-1">Amazon <span class="text-warning">( 301 <i class="bi bi-star-fill"></i>)</span></h5>
-                <p class="mb-1">Member since: 23-10-25 in USA</p>
-                <p class="mb-0">Sold 500 items</p>
-            </div>
-        </div>
-
-        <div class="bg-white border rounded p-4">
-            <h5 class="mb-3">Feedback Ratings</h5>
-            <table class="table text-center mb-0">
-                <thead>
-                    <tr>
-                        <th scope="col"></th>
-                        <th scope="col">1 month</th>
-                        <th scope="col">6 months</th>
-                        <th scope="col">+12 months</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td class="text-start"><i class="bi bi-star-fill text-warning me-1"></i>
-                            <i class="bi bi-star-fill text-warning me-1"></i>
-                            <i class="bi bi-star-fill text-warning me-1"></i>
-                            <i class="bi bi-star-fill text-warning me-1"></i>
-                            <i class="bi bi-star-fill text-warning me-1"></i>
-                        </td>
-                        <td>91</td>
-                        <td>40</td>
-                        <td>80</td>
-                    </tr>
-                    <tr>
-                        <td class="text-start"><i class="bi bi-star-fill text-warning me-1"></i>
-                            <i class="bi bi-star-fill text-warning me-1"></i>
-                            <i class="bi bi-star-fill text-warning me-1"></i>
-                            <i class="bi bi-star-fill text-warning me-1"></i>
-                            <i class="bi bi-star text-warning me-1"></i>
-                        </td>
-                        <td>2</td>
-                        <td>4</td>
-                        <td>4</td>
-                    </tr>
-                    <tr>
-                        <td class="text-start"><i class="bi bi-star-fill text-warning me-1"></i>
-                            <i class="bi bi-star-fill text-warning me-1"></i>
-                            <i class="bi bi-star-fill text-warning me-1"></i>
-                            <i class="bi bi-star text-warning me-1"></i>
-                            <i class="bi bi-star text-warning me-1"></i>
-                        </td>
-                        <td>0</td>
-                        <td>1</td>
-                        <td>1</td>
-                    </tr>
-                    <tr>
-                        <td class="text-start"><i class="bi bi-star-fill text-warning me-1"></i>
-                            <i class="bi bi-star-fill text-warning me-1"></i>
-                            <i class="bi bi-star text-warning me-1"></i>
-                            <i class="bi bi-star text-warning me-1"></i>
-                            <i class="bi bi-star text-warning me-1"></i>
-                        </td>
-                        <td>0</td>
-                        <td>1</td>
-                        <td>1</td>
-                    </tr>
-                    <tr>
-                        <td class="text-start"><i class="bi bi-star-fill text-warning me-1"></i>
-                            <i class="bi bi-star text-warning me-1"></i>
-                            <i class="bi bi-star text-warning me-1"></i>
-                            <i class="bi bi-star text-warning me-1"></i>
-                            <i class="bi bi-star text-warning me-1"></i>
-                        </td>
-                        <td>0</td>
-                        <td>1</td>
-                        <td>1</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
     </div>
 
     <!-- Footer -->
@@ -124,6 +45,106 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script>
 
+        // Fecth user profile data from API
+        const urlParams = new URLSearchParams(window.location.search);
+        const userId = parseInt(urlParams.get('id'));
+        fetch(`http://localhost:8080/api/users/1`)
+            .then(response => response.json())
+            .then(user => {
+                console.log(user);
+                renderUserProfile(user);
+            })
+            .catch(error => {
+                console.error('Error fetching user profile:', error);
+                alert("User profile not found. Redirecting to home page.");
+                window.location.href = "index.html";
+            }
+        );
+
+        // Function to render user profile data on the page
+        function renderUserProfile(user) {
+            const userProfileContainer = document.getElementById('user-profile');
+            userProfileContainer.innerHTML = `
+                <div class="bg-white border rounded p-4 mb-4 d-flex align-items-center">
+                    <img class="img-fluid border rounded me-3" style="width: 100px; height: 100px;" src="${user.avatarUrl || 'images/img_test1_white.png'}" alt="User Avatar">
+                    <div>
+                        <h5 class="mb-1">${user.name} <span class="text-warning">(${user.rating} <i class="bi bi-star-fill"></i>)</span></h5>
+                        <p class="mb-1">Member since: ${new Date(user.createdAt).toLocaleDateString()} in ${user.location}</p>
+                        <p class="mb-0">Sold ${user.soldItemsCount} items</p>
+                    </div>
+                </div>
+
+                <div class="bg-white border rounded p-4">
+                <h5 class="mb-3">Feedback Ratings</h5>
+                <table class="table text-center mb-0">
+                    <thead>
+                        <tr>
+                            <th scope="col"></th>
+                            <th scope="col">1 month</th>
+                            <th scope="col">6 months</th>
+                            <th scope="col">+12 months</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td class="text-start"><i class="bi bi-star-fill text-warning me-1"></i>
+                                <i class="bi bi-star-fill text-warning me-1"></i>
+                                <i class="bi bi-star-fill text-warning me-1"></i>
+                                <i class="bi bi-star-fill text-warning me-1"></i>
+                                <i class="bi bi-star-fill text-warning me-1"></i>
+                            </td>
+                            <td>91</td>
+                            <td>40</td>
+                            <td>80</td>
+                        </tr>
+                        <tr>
+                            <td class="text-start"><i class="bi bi-star-fill text-warning me-1"></i>
+                                <i class="bi bi-star-fill text-warning me-1"></i>
+                                <i class="bi bi-star-fill text-warning me-1"></i>
+                                <i class="bi bi-star-fill text-warning me-1"></i>
+                                <i class="bi bi-star text-warning me-1"></i>
+                            </td>
+                            <td>2</td>
+                            <td>4</td>
+                            <td>4</td>
+                        </tr>
+                        <tr>
+                            <td class="text-start"><i class="bi bi-star-fill text-warning me-1"></i>
+                                <i class="bi bi-star-fill text-warning me-1"></i>
+                                <i class="bi bi-star-fill text-warning me-1"></i>
+                                <i class="bi bi-star text-warning me-1"></i>
+                                <i class="bi bi-star text-warning me-1"></i>
+                            </td>
+                            <td>0</td>
+                            <td>1</td>
+                            <td>1</td>
+                        </tr>
+                        <tr>
+                            <td class="text-start"><i class="bi bi-star-fill text-warning me-1"></i>
+                                <i class="bi bi-star-fill text-warning me-1"></i>
+                                <i class="bi bi-star text-warning me-1"></i>
+                                <i class="bi bi-star text-warning me-1"></i>
+                                <i class="bi bi-star text-warning me-1"></i>
+                            </td>
+                            <td>0</td>
+                            <td>1</td>
+                            <td>1</td>
+                        </tr>
+                        <tr>
+                            <td class="text-start"><i class="bi bi-star-fill text-warning me-1"></i>
+                                <i class="bi bi-star text-warning me-1"></i>
+                                <i class="bi bi-star text-warning me-1"></i>
+                                <i class="bi bi-star text-warning me-1"></i>
+                                <i class="bi bi-star text-warning me-1"></i>
+                            </td>
+                            <td>0</td>
+                            <td>1</td>
+                            <td>1</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>`;
+        }  
     </script>
 </body>
 
