--- a/backend-api/src/main/resources/static/register.html
+++ b/backend-api/src/main/resources/static/register.html
@@ -189,7 +189,9 @@
                 })
                 .then(data => {
                     alert('Account created successfully!');
-                    window.location.href = 'index.html?loggedIn=true';
+                    document.cookie = "user_session=active; path=/; max-age=3600";
+                    document.cookie = `user_id=${data.id}; path=/; max-age=3600`;
+                    window.location.href = 'index.html';
                 })
                 .catch(error => {
                     console.error('Registration error:', error);
